--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_all_guests"
-        android:name="com.fabscorp.guests.ui.AllGuestsFragment"
+        android:name="com.fabscorp.guests.view.AllGuestsFragment"
         android:label="@string/menu_all_guests"
         tools:layout="@layout/fragment_all_guests" />
 
     <fragment
         android:id="@+id/nav_present"
-        android:name="com.fabscorp.guests.ui.PresentFragment"
+        android:name="com.fabscorp.guests.view.PresentFragment"
         android:label="@string/menu_present"
         tools:layout="Present" />
 
     <fragment
         android:id="@+id/nav_absent"
-        android:name="com.fabscorp.guests.ui.AbsentFragment"
+        android:name="com.fabscorp.guests.view.AbsentFragment"
         android:label="@string/menu_absent"
         tools:layout="@layout/fragment_absent" />
 </navigation>
